# Arduino-Pedelec-Controller

./: CMakeLists.txt
Arduino_Pedelec_Controller/: Arduino_Pedelec_Controller.ino  CMakeLists.txt
tests/: CMakeLists.txt
tests/fcsim/: CMakeLists.txt  fcsim.cpp
tests/simavr/: CMakeLists.txt
tests/simavr/cores/: CMakeLists.txt  sim_core_config.h  sim_core_decl.h
tests/simavr/sim/: CMakeLists.txt
tests/simavr/sim/avr/: avr_mcu_section.h
